--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "react": "^16.13.1",
     "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.1",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "uuid": "^8.3.0"
