--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.11",
     "react-useanimations": "^2.0.5",
     "redux": "^4.0.5",
@@ -41,5 +41,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {},
+  "type": "module"
 }
