--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "canvas": "^2.7.0"
+  },
   "type": "module"
 }
