--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-tooltip": "^4.2.11",
     "react-useanimations": "^2.0.5",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "uuid": "^8.3.0"
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
